# pytrello2

./: .buildinfo  .flake8  CONTRIBUTING.md  DEVELOPER_GUIDE.md  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytrello2.html  pytrello2.models.html  search.html  searchindex.js
.github/workflows/: ci-python.yml  docs.yml  publish.yml  sphinx.yml  tests.yml
_modules/: index.html  pytrello2.html
_modules/pytrello2/: board.html  card.html  client.html  exceptions.html  list.html
_modules/pytrello2/models/: board.html  card.html  list.html  model.html
_sources/: index.md.txt  modules.rst.txt  pytrello2.models.rst.txt  pytrello2.rst.txt
docs/: README.md  authentication.rst  conf.py  contributing.rst  examples.rst  gettingstarted.rst  index.rst  installation.rst  license.rst  modules.rst  pytrello2.models.rst  pytrello2.rst  tests.rst
docs/source/: conf.py
pytrello2/: __init__.py  board.py  card.py  client.py  exceptions.py  list.py  main.py
pytrello2/models/: __init__.py  board.py  card.py  list.py  model.py
tests/: test_board.py  test_card.py  test_client.py  test_list.py  test_main.py  test_models.py  test_trello.py  utils.py
tests/data/: board.json  boards.json  card.json  cards.json  list.json  lists.json
