[tool.poetry]
name = "pytrello2"
version = "0.0.0"
description = "Python wrapper for the Trello API"
authors = [
    "Venu Vardhan Reddy Tekula <vt2182@nyu.edu>",
    "Carolina Martin <cm5685@nyu.edu>",
    "Jessie Theisen <jt1321@nyu.edu>",
    "Sonia Susanto <ss9040@nyu.edu>",
    "Yamini Lakshmi Narasimhan <yl9822@nyu.edu>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"

[tool.black]
line-length = 88
preview = true
target-version = ['py37']
exclude = '''
/(
    \.git
  | \.venv
  | migrations
  | scripts
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
