[tool.poetry]
name = "pytrello2"
version = "0.1.0"
description = "Python wrapper for the Trello API"
authors = [
    "Venu Vardhan Reddy Tekula <vt2182@nyu.edu>",
    "Carolina Martin <cm5685@nyu.edu>",
    "Jessie Theisen <jt1321@nyu.edu>",
    "Sonia Susanto <ss9040@nyu.edu>",
    "Yamini Lakshmi Narasimhan <yl9822@nyu.edu>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
pytest = "^7.4.2"
coveralls = "^3.3.1"
pytest-mock = "^3.12.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-copybutton = "^0.5.2"
myst-parser = "^2.0.0"

[tool.black]
line-length = 88
preview = true
target-version = ['py37']
exclude = '''
/(
    \.git
  | \.venv
  | migrations
  | scripts
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
